# LPSM-Bridge

./: .gitignore  CMakeLists.txt  ControlHubScripts_.txt  README.md  command.bash  config.json
DLLs/: Bundle-MsysApp.ps1  deploy_controlhub.ps1
src/: main.cpp
src/core/: Config.hpp  Logger.hpp  MessageBus.hpp  StateManager.hpp
src/driver/: CamServer.hpp  KeyboardHook.hpp  PlcClient.hpp
src/logic/: ApiService.hpp  Controller.hpp
src/server/: WsServer.hpp
